# python-project-50

./: Makefile  README.md  pyproject.toml
gendiff/: __init__.py
gendiff/modules/: generate_diff_data.py
gendiff/scripts/: gendiff.py
